# OBJLoader

./: .gitattributes  .gitignore  CMakeLists.txt  OBJLoader.sln  OBJLoader.vcxproj  OBJLoader.vcxproj.filters  README.MD
include/glad/: gl.h
loader/: CMakeLists.txt
loader/src/: material.cpp  material.h  model_data.cpp  model_data.h
shaders/: cube.frag  cube.vert  light.frag  model.frag
src/: camera.h  cube.frag  cube.vert  glad.c  main.cpp  material.cpp  material.h  model.cpp  model.h  shader.h  test.cpp
src/loader/: material.cpp  material.h  model_data.cpp
src/viewer/: camera.h  shader.h  test.cpp
viewer/: CMakeLists.txt
viewer/src/: model.cpp  model.h  shader.h  test.cpp  texture.h  viewer.cpp
